tests/src/snapshots/fe_compiler_tests__analysis__case_050_return_empty_tuple.snap
---
source: tests/src/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "explicit_return_a1",
                        params: [],
                        return_type: Base(
                            Unit,
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "explicit_return_a2",
                        params: [],
                        return_type: Base(
                            Unit,
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "explicit_return_b1",
                        params: [],
                        return_type: Base(
                            Unit,
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "explicit_return_b2",
                        params: [],
                        return_type: Base(
                            Unit,
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "implicit_a1",
                        params: [],
                        return_type: Base(
                            Unit,
                        ),
                    },
                    FunctionAttributes {
                        is_public: true,
                        name: "implicit_a2",
                        params: [],
                        return_type: Base(
                            Unit,
                        ),
                    },
                ],
            },
        ),
    },
}

note: 
  ┌─ features/return_unit.fe:7:12
  │
7 │     return ()
  │            ^^ attributes hash: 13510039392732087821
  │
  = ExpressionAttributes {
        typ: Base(
            Unit,
        ),
        location: Value,
        move_location: None,
    }

note: 
   ┌─ features/return_unit.fe:13:12
   │
13 │     return ()
   │            ^^ attributes hash: 13510039392732087821
   │
   = ExpressionAttributes {
         typ: Base(
             Unit,
         ),
         location: Value,
         move_location: None,
     }

note: 
  ┌─ features/return_unit.fe:3:3
  │  
3 │ ╭   pub def explicit_return_a1():
4 │ │     return
  │ ╰──────────^ attributes hash: 1876963790513669126
  │  
  = FunctionAttributes {
        is_public: true,
        name: "explicit_return_a1",
        params: [],
        return_type: Base(
            Unit,
        ),
    }

note: 
  ┌─ features/return_unit.fe:6:3
  │  
6 │ ╭   pub def explicit_return_a2():
7 │ │     return ()
  │ ╰─────────────^ attributes hash: 3364218285822111877
  │  
  = FunctionAttributes {
        is_public: true,
        name: "explicit_return_a2",
        params: [],
        return_type: Base(
            Unit,
        ),
    }

note: 
   ┌─ features/return_unit.fe:9:3
   │  
 9 │ ╭   pub def explicit_return_b1() -> ():
10 │ │     return
   │ ╰──────────^ attributes hash: 3119760715755557810
   │  
   = FunctionAttributes {
         is_public: true,
         name: "explicit_return_b1",
         params: [],
         return_type: Base(
             Unit,
         ),
     }

note: 
   ┌─ features/return_unit.fe:12:3
   │  
12 │ ╭   pub def explicit_return_b2() -> ():
13 │ │     return ()
   │ ╰─────────────^ attributes hash: 3632662372498159713
   │  
   = FunctionAttributes {
         is_public: true,
         name: "explicit_return_b2",
         params: [],
         return_type: Base(
             Unit,
         ),
     }

note: 
   ┌─ features/return_unit.fe:15:3
   │  
15 │ ╭   pub def implicit_a1():
16 │ │     pass
   │ ╰────────^ attributes hash: 17402243144066639029
   │  
   = FunctionAttributes {
         is_public: true,
         name: "implicit_a1",
         params: [],
         return_type: Base(
             Unit,
         ),
     }

note: 
   ┌─ features/return_unit.fe:18:3
   │  
18 │ ╭   pub def implicit_a2() -> ():
19 │ │     pass
   │ ╰────────^ attributes hash: 13481222315964146038
   │  
   = FunctionAttributes {
         is_public: true,
         name: "implicit_a2",
         params: [],
         return_type: Base(
             Unit,
         ),
     }

note: 
   ┌─ features/return_unit.fe:1:1
   │  
 1 │ ╭ contract Foo:
 2 │ │ 
 3 │ │   pub def explicit_return_a1():
 4 │ │     return
   · │
18 │ │   pub def implicit_a2() -> ():
19 │ │     pass
   │ ╰────────^ attributes hash: 12660317516329267343
   │  
   = ContractAttributes {
         public_functions: [
             FunctionAttributes {
                 is_public: true,
                 name: "explicit_return_a1",
                 params: [],
                 return_type: Base(
                     Unit,
                 ),
             },
             FunctionAttributes {
                 is_public: true,
                 name: "explicit_return_a2",
                 params: [],
                 return_type: Base(
                     Unit,
                 ),
             },
             FunctionAttributes {
                 is_public: true,
                 name: "explicit_return_b1",
                 params: [],
                 return_type: Base(
                     Unit,
                 ),
             },
             FunctionAttributes {
                 is_public: true,
                 name: "explicit_return_b2",
                 params: [],
                 return_type: Base(
                     Unit,
                 ),
             },
             FunctionAttributes {
                 is_public: true,
                 name: "implicit_a1",
                 params: [],
                 return_type: Base(
                     Unit,
                 ),
             },
             FunctionAttributes {
                 is_public: true,
                 name: "implicit_a2",
                 params: [],
                 return_type: Base(
                     Unit,
                 ),
             },
         ],
         init_function: None,
         events: [],
         structs: [],
         external_contracts: [],
     }

note: 
  ┌─ features/return_unit.fe:9:35
  │
9 │   pub def explicit_return_b1() -> ():
  │                                   ^^ attributes hash: 7530568563565570143
  │
  = Base(
        Unit,
    )

note: 
   ┌─ features/return_unit.fe:12:35
   │
12 │   pub def explicit_return_b2() -> ():
   │                                   ^^ attributes hash: 7530568563565570143
   │
   = Base(
         Unit,
     )

note: 
   ┌─ features/return_unit.fe:18:28
   │
18 │   pub def implicit_a2() -> ():
   │                            ^^ attributes hash: 7530568563565570143
   │
   = Base(
         Unit,
     )


