tests/src/snapshots/fe_compiler_tests__analysis__case_056_return_i128_cast.snap
---
source: tests/src/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [],
                        return_type: Base(
                            Numeric(
                                I128,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
}

note: 
  ┌─ features/return_i128_cast.fe:3:22
  │
3 │         return i128(-3)
  │                      ^ attributes hash: 16797824492585953824
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U256,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_i128_cast.fe:3:21
  │
3 │         return i128(-3)
  │                     ^^ attributes hash: 5494075259962106032
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                I128,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_i128_cast.fe:3:16
  │
3 │         return i128(-3)
  │                ^^^^^^^^ attributes hash: 5494075259962106032
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                I128,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_i128_cast.fe:2:5
  │  
2 │ ╭     pub def bar() -> i128:
3 │ │         return i128(-3)
  │ ╰───────────────────────^ attributes hash: 4353453468124866257
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [],
        return_type: Base(
            Numeric(
                I128,
            ),
        ),
    }

note: 
  ┌─ features/return_i128_cast.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub def bar() -> i128:
3 │ │         return i128(-3)
  │ ╰───────────────────────^ attributes hash: 7852873630292919407
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [],
                return_type: Base(
                    Numeric(
                        I128,
                    ),
                ),
            },
        ],
        init_function: None,
        events: [],
        structs: [],
        external_contracts: [],
        created_contracts: {},
    }

note: 
  ┌─ features/return_i128_cast.fe:3:16
  │
3 │         return i128(-3)
  │                ^^^^ attributes hash: 8485302633634877015
  │
  = TypeConstructor {
        typ: Base(
            Numeric(
                I128,
            ),
        ),
    }

note: 
  ┌─ features/return_i128_cast.fe:2:22
  │
2 │     pub def bar() -> i128:
  │                      ^^^^ attributes hash: 2176316003589696703
  │
  = Base(
        Numeric(
            I128,
        ),
    )


