tests/src/snapshots/fe_compiler_tests__analysis__case_058_return_identity_u8.snap
---
source: tests/src/analysis.rs
expression: "build_snapshot(fixture, &src, &context)"

---
ModuleAttributes {
    type_defs: {
        "Foo": Contract(
            Contract {
                name: "Foo",
                functions: [
                    FunctionAttributes {
                        is_public: true,
                        name: "bar",
                        params: [
                            (
                                "x",
                                Base(
                                    Numeric(
                                        U8,
                                    ),
                                ),
                            ),
                        ],
                        return_type: Base(
                            Numeric(
                                U8,
                            ),
                        ),
                    },
                ],
            },
        ),
    },
}

note: 
  ┌─ features/return_identity_u8.fe:3:16
  │
3 │         return x
  │                ^ attributes hash: 6817314866882205962
  │
  = ExpressionAttributes {
        typ: Base(
            Numeric(
                U8,
            ),
        ),
        location: Value,
        move_location: None,
    }

note: 
  ┌─ features/return_identity_u8.fe:2:5
  │  
2 │ ╭     pub def bar(x: u8) -> u8:
3 │ │         return x
  │ ╰────────────────^ attributes hash: 16998290003023746221
  │  
  = FunctionAttributes {
        is_public: true,
        name: "bar",
        params: [
            (
                "x",
                Base(
                    Numeric(
                        U8,
                    ),
                ),
            ),
        ],
        return_type: Base(
            Numeric(
                U8,
            ),
        ),
    }

note: 
  ┌─ features/return_identity_u8.fe:1:1
  │  
1 │ ╭ contract Foo:
2 │ │     pub def bar(x: u8) -> u8:
3 │ │         return x
  │ ╰────────────────^ attributes hash: 4436904161587300138
  │  
  = ContractAttributes {
        public_functions: [
            FunctionAttributes {
                is_public: true,
                name: "bar",
                params: [
                    (
                        "x",
                        Base(
                            Numeric(
                                U8,
                            ),
                        ),
                    ),
                ],
                return_type: Base(
                    Numeric(
                        U8,
                    ),
                ),
            },
        ],
        init_function: None,
        events: [],
        structs: [],
        external_contracts: [],
        created_contracts: {},
    }

note: 
  ┌─ features/return_identity_u8.fe:2:20
  │
2 │     pub def bar(x: u8) -> u8:
  │                    ^^ attributes hash: 1872326638020472004
  │
  = Base(
        Numeric(
            U8,
        ),
    )

note: 
  ┌─ features/return_identity_u8.fe:2:27
  │
2 │     pub def bar(x: u8) -> u8:
  │                           ^^ attributes hash: 1872326638020472004
  │
  = Base(
        Numeric(
            U8,
        ),
    )


